--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Путешествия по России</title>
     <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
-
+<body class="page">
+    
 </body>
 </html>
