--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
-    
+    <header class="header">
+        <a href="#" class="logo">
+            <img src="./images/header__logo.svg" alt="Изображение России" class="logo__img">
+        </a>
+        <ul class="langs">
+            <li class="langs__item langs__item_active">Ru</li>
+            <li class="langs__item">En</li>
+        </ul>
+    </header>    
 </body>
 </html>
