add section lead

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
             <li class="langs__item langs__item_active">Ru</li>
             <li class="langs__item">En</li>
         </ul>
-    </header>    
+    </header>
+    <main>
+        <section class="lead">
+            <h1 class="lead__title">Путешествия по России</h1>
+            <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+            <figure class="lead__illustration">
+                <img src="./images/lead-polka.jpg" alt="Женщина спит в поезде, отвернувшись к стенке" class="lead__img">
+                <figcaption class="lead__img-caption">ваша полка — верхняя</figcaption>
+            </figure>
+        </section>
+    </main>
 </body>
 </html>
