add section gallery

--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
                 <li class="travell-facts__item">Аэропортов 241</li>
             </ul>
         </section>
+        
+        <section class="gallery">
+            <ul class="gallery__list">
+                <li><img src="./images/photo-gallery-train.jpg" alt="Вил из окна движущегося поезда" class="gallery__image"></li>
+                <li><img src="./images/photo-gallery-snow-mountains.jpg" alt="Белоснежные горные вершины с мягкими облаками" class="gallery__image"></li>
+                <li><img src="./images/photo-gallery-field.jpg" alt="Поле со стогами сена в закатной дымке" class="gallery__image"></li>
+                <li><img src="./images/photo-gallery-fog-forest.jpg" alt="Лесные вершины в тумане" class="gallery__image"></li>
+                <li><img src="./images/photo-gallery-car-bailkal.jpg" alt="Колесо автомобиля, стоящего на голубом льду замерзжешего водоема" class="gallery__image"></li>
+                <li><img src="./images/photo-gallery-barguzin-bay.jpg" alt="Пляж в Баргузинском заливе - самом крупном и глубоком заливе Байкала" class="gallery__image"></li>
+                <li><img src="./images/photo-gallery-montains.jpg " alt="Уходящие вверх горы, вершины которых припорошены снегом. " class="gallery__image"></li>
+                <li><img src="./images/photo-gallery-walker.jpg" alt="Знак пешеходного перехода на фоне бетонных конструкций" class="gallery__image"></li>
+                <li><img src="./images/photo-gallery-mutnovsky-volcano.jpg" alt="Скалистая местность, в которой находится действующий вулкан в южной части полуострова Камчатка - Мутновская сопка" class="gallery__image"></li>
+                <li><img src="./images/photo-gallery-kamchatka.jpg" alt="Камчатская равнина, расстилающаяся перед сопкой" class="gallery__image"></li>
+                <li><img src="./images/photo-gallery-baikal.jpg" alt="Скалистый берег Байкала" class="gallery__image"></li>
+                <li><img src="./images/photo-gallery-hills.jpg" alt="Холмы и скалы в тумане" class="gallery__image"></li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
