--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <img src="./images/curonian-spit.jpg" alt="Береговая зона Куршской косы, где вода наполнена камнями и пнями" class="place__img">
                 <div class="place__link-container">
                     <span class="place__secondary-text">URL</span>
-                    <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+                    <a href="http://park-kosa.ru" class="place__link" target="blank">park-kosa.ru</a>
                 </div>
                 <div class="place__text">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -74,7 +74,7 @@
                 <img src="./images/kola-peninsula.jpg" alt="Побережье Баренцева моря на Кольском полусотровеЖ сила моря и заснеженные скалы" class="place__img">
                 <div class="place__link-container">
                     <span class="place__secondary-text">URL</span>
-                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
+                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link" target="blank">National Geographic</a>
                 </div>
                 <div class="place__text">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -99,7 +99,7 @@
                 <img src="./images/winter-baikal.png" alt="Причудливые узоры на ледяной глади Байкала" class="place__img">
                 <div class="place__link-container">
                     <span class="place__secondary-text">URL</span>
-                    <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+                    <a href="https://vk.com/baikalmile" class="place__link" target="blank">https://vk.com/baikalmile</a>
                 </div>
                 <div class="place__text">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
@@ -118,6 +118,12 @@
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                 </div>
             </article>
+        </section>
+        <section class="cover">
+            <h3 class="cover__title">До Байкала «на собаках»</h3>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="blank"></a>
+            <div class="cover__overlay"></div>
         </section>
     </main>
 </body>
