--- a/index.html
+++ b/index.html
@@ -126,5 +126,18 @@
             <div class="cover__overlay"></div>
         </section>
     </main>
+    <footer class="footer">
+        <nav>
+            <ul class="menu">
+                <li class="menu__item"><a href="" class="menu__link">Карты</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Погода</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Расписание</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Календарь</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Путешествия</a></li>
+            </ul>
+        </nav>
+        <div class="copyright">&#169; 2022. Мариничева Екатерина</div>
+            <!-- \00A9 CSS-код rjgbhfqnf -->
+    </footer>
 </body>
 </html>
