fix links in footer menu

--- a/index.html
+++ b/index.html
@@ -168,15 +168,14 @@
     <footer class="footer">
       <nav>
         <ul class="menu">
-          <li class="menu__item"><a href="" class="menu__link">Карты</a></li>
-          <li class="menu__item"><a href="" class="menu__link">Погода</a></li>
-          <li class="menu__item"><a href="" class="menu__link">Расписание</a></li>
-          <li class="menu__item"><a href="" class="menu__link">Календарь</a></li>
-          <li class="menu__item"><a href="" class="menu__link">Путешествия</a></li>
+          <li class="menu__item"><a href="https://yandex.ru/maps" class="menu__link" target="blank">Карты</a></li>
+          <li class="menu__item"><a href="https://yandex.ru/pogoda" class="menu__link" target="blank">Погода</a></li>
+          <li class="menu__item"><a href="https://rasp.yandex.ru" class="menu__link" target="blank">Расписание</a></li>
+          <li class="menu__item"><a href="https://calendar.yandex.ru" class="menu__link" target="blank">Календарь</a></li>
+          <li class="menu__item"><a href="https://travel.yandex.ru" class="menu__link" target="blank">Путешествия</a></li>
         </ul>
       </nav>
       <div class="copyright">&#169; 2022. Мариничева Екатерина</div>
     </footer>
 </body>
-
 </html>
