--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <img src="./images/header__logo.svg" alt="Изображение России" class="logo__img">
     </a>
     <ul class="langs">
-      <li class="langs__item langs__item_active">Ru</li>
-      <li class="langs__item">En</li>
+      <li class="langs__item"><a href="#" class="langs__link  langs__link_active">Ru</a></li>
+      <li class="langs__item"><a href="#" class="langs__link">En</a></li>
     </ul>
   </header>
 
@@ -53,9 +53,9 @@
         </ul>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" aria-label="Галерея красивых фотографий">
         <ul class="gallery__list">
-          <li><img src="./images/photo-gallery-train.jpg" alt="Вил из окна движущегося поезда" class="gallery__image">
+          <li><img src="./images/photo-gallery-train.jpg" alt="Вид из окна движущегося поезда" class="gallery__image">
           </li>
           <li><img src="./images/photo-gallery-snow-mountains.jpg" alt="Белоснежные горные вершины с мягкими облаками"
               class="gallery__image"></li>
@@ -82,9 +82,9 @@
         </ul>
       </section>
 
-      <section class="places">
+      <section class="places" aria-label="Места, рекомендуемые к посещению с небольшими описаниями">
         <article class="place">
-          <h3 class="place__name">Куршская коса</h3>
+          <h2 class="place__name">Куршская коса</h2>
           <img src="./images/curonian-spit.jpg" alt="Береговая зона Куршской косы, где вода наполнена камнями и пнями"
             class="place__img">
           <div class="place__link-container">
@@ -102,7 +102,7 @@
           </div>
         </article>
         <article class="place">
-          <h3 class="place__name">Кольский</h3>
+          <h2 class="place__name">Кольский</h2>
           <img src="./images/kola-peninsula.jpg"
             alt="Побережье Баренцева моря на Кольском полусотровеЖ сила моря и заснеженные скалы" class="place__img">
           <div class="place__link-container">
@@ -120,7 +120,7 @@
           </div>
         </article>
         <article class="place">
-          <h3 class="place__name">Алтай</h3>
+          <h2 class="place__name">Алтай</h2>
           <img src="./images/altai.jpg" alt="Ноутбук на фоне умиротворяющего леса Алтая" class="place__img">
           <div class="place__link-container">
             <span class="place__secondary-text">URL</span>
@@ -132,7 +132,7 @@
           </div>
         </article>
         <article class="place">
-          <h3 class="place__name">Зимний Байкал</h3>
+          <h2 class="place__name">Зимний Байкал</h2>
           <img src="./images/winter-baikal.png" alt="Причудливые узоры на ледяной глади Байкала" class="place__img">
           <div class="place__link-container">
             <span class="place__secondary-text">URL</span>
@@ -144,7 +144,7 @@
           </div>
         </article>
         <article class="place">
-          <h3 class="place__name">Карелия</h3>
+          <h2 class="place__name">Карелия</h2>
           <img src="./images/karelia.jpg" alt="Река в окружении лесов Карелии" class="place__img">
           <div class="place__link-container">
             <span class="place__secondary-text">URL</span>
@@ -157,7 +157,7 @@
       </section>
 
       <section class="cover">
-        <h3 class="cover__title">До Байкала «на собаках»</h3>
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.</p>
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="blank"></a>
