fix element copyright in footer

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <li class="menu__item"><a href="https://travel.yandex.ru" class="menu__link" target="blank">Путешествия</a></li>
         </ul>
       </nav>
-      <div class="copyright">&#169; 2022. Мариничева Екатерина</div>
+      <p class="footer__copyright">&#169; 2022. Мариничева Екатерина</p>
     </footer>
 </body>
 </html>
