mark mistakes by review

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="./images/header__logo.svg" alt="Изображение России" class="logo__img">
     </a>
     <ul class="langs">
-      <li class="langs__item"><a href="#" class="langs__link  langs__link_active">Ru</a></li>
+      <li class="langs__item"><a href="#" class="langs__link langs__link_active">Ru</a></li>
       <li class="langs__item"><a href="#" class="langs__link">En</a></li>
     </ul>
   </header>
@@ -157,11 +157,11 @@
       </section>
 
       <section class="cover">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-          электричках.</p>
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="blank"></a>
-        <div class="cover__overlay"></div>
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="blank">
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+            электричках.</p>
+        </a>
       </section>
     </main>
 
