--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Путешествия по России</title>
+  <title>Путешествия по России | Учебный проект</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
@@ -15,24 +15,24 @@
       <img src="./images/header__logo.svg" alt="Изображение России" class="logo__img">
     </a>
     <ul class="langs">
-      <li class="langs__item"><a href="#" class="langs__link langs__link_active">Ru</a></li>
-      <li class="langs__item"><a href="#" class="langs__link">En</a></li>
+      <li class="langs__item"><a href="#" class="langs__link langs__link_active" data-lang="ru">Ru</a></li>
+      <li class="langs__item"><a href="#" class="langs__link" data-lang="en">En</a></li>
     </ul>
   </header>
 
     <main>
       <section class="lead">
-        <h1 class="lead__title">Путешествия по России</h1>
-        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+        <h1 class="lead__title" data-translate="lead-title">Путешествия по России</h1>
+        <p class="lead__subtitle" data-translate="lead-subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <figure class="lead__illustration">
           <img src="./images/lead-polka.jpg" alt="Женщина спит в поезде, отвернувшись к стенке" class="lead__img">
-          <figcaption class="lead__img-caption">ваша полка — верхняя</figcaption>
+          <figcaption class="lead__img-caption" data-translate="lead-img-caption">ваша полка — верхняя</figcaption>
         </figure>
       </section>
 
       <section class="intro">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
-        <p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36%
+        <h2 class="intro__title" data-translate="intro-title">Чего мы там не видели?</h2>
+        <p class="intro__text" data-translate="intro-text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36%
           планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом
           деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга, густыми лесами Саян и&nbsp;суровыми
           льдами плато Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта
@@ -41,15 +41,15 @@
           километров по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего
           отпуска.</p>
         <ul class="travell-facts">
-          <li class="travell-facts__item"><span class="travell-facts__accent-text">Часовых поясов</span> 11
+          <li class="travell-facts__item"><span class="travell-facts__accent-text" data-translate="travell-fact-span-1">Часовых поясов</span> 11
           </li>
-          <li class="travell-facts__item"><span class="travell-facts__accent-text">Объектов природного наследия
+          <li class="travell-facts__item"><span class="travell-facts__accent-text" data-translate="travell-fact-span-2">Объектов природного наследия
               ЮНЕСКО</span> 12</li>
-          <li class="travell-facts__item"><span class="travell-facts__accent-text">Объектов культурного
+          <li class="travell-facts__item"><span class="travell-facts__accent-text" data-translate="travell-fact-span-3">Объектов культурного
               наследия ЮНЕСКО</span> 16</li>
-          <li class="travell-facts__item"><span class="travell-facts__accent-text">Природных
+          <li class="travell-facts__item"><span class="travell-facts__accent-text" data-translate="travell-fact-span-4">Природных
               заповедников</span> 105</li>
-          <li class="travell-facts__item"><span class="travell-facts__accent-text">Аэропортов</span> 241</li>
+          <li class="travell-facts__item"><span class="travell-facts__accent-text" data-translate="travell-fact-span-5">Аэропортов</span> 241</li>
         </ul>
       </section>
 
@@ -84,7 +84,7 @@
 
       <section class="places" aria-label="Места, рекомендуемые к посещению с небольшими описаниями">
         <article class="place">
-          <h2 class="place__name">Куршская коса</h2>
+          <h2 class="place__name" data-translate="place-1-name">Куршская коса</h2>
           <img src="./images/curonian-spit.jpg" alt="Береговая зона Куршской косы, где вода наполнена камнями и пнями"
             class="place__img">
           <div class="place__link-container">
@@ -92,9 +92,9 @@
             <a href="http://park-kosa.ru" class="place__link" target="blank">park-kosa.ru</a>
           </div>
           <div class="place__text">
-            <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных
+            <p class="place__paragraph" data-translate="place-1-text">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных
               горизонта&nbsp;&mdash; спокойного Куршского залива одной стороны и&nbsp;подёрнутого рябью волн Балтийского
-              моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава. </p>
+              моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
             <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника
               и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская
               коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест
@@ -102,7 +102,7 @@
           </div>
         </article>
         <article class="place">
-          <h2 class="place__name">Кольский</h2>
+          <h2 class="place__name" data-translate="place-2-name">Кольский</h2>
           <img src="./images/kola-peninsula.jpg"
             alt="Побережье Баренцева моря на Кольском полусотровеЖ сила моря и заснеженные скалы" class="place__img">
           <div class="place__link-container">
@@ -111,8 +111,8 @@
               target="blank">National Geographic</a>
           </div>
           <div class="place__text">
-            <p class="place__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-            <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического
+            <p class="place__paragraph" data-translate="place-2-text-1">Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+            <p class="place__paragraph" data-translate="place-2-text-2">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического
               фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных
               воспоминаний об&nbsp;уроках географии. Возможно, вы&nbsp;не&nbsp;интересовались пронизывающей земную кору
               сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть
@@ -120,46 +120,46 @@
           </div>
         </article>
         <article class="place">
-          <h2 class="place__name">Алтай</h2>
+          <h2 class="place__name" data-translate="place-3-name">Алтай</h2>
           <img src="./images/altai.jpg" alt="Ноутбук на фоне умиротворяющего леса Алтая" class="place__img">
           <div class="place__link-container">
             <span class="place__secondary-text">URL</span>
             <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
           </div>
           <div class="place__text">
-            <p class="place__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России. В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные соснами, горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна, сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.</p>
-            <p class="place__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.</p>
+            <p class="place__paragraph" data-translate="place-3-text-1">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России. В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные соснами, горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна, сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.</p>
+            <p class="place__paragraph" data-translate="place-3-text-2">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.</p>
           </div>
         </article>
         <article class="place">
-          <h2 class="place__name">Зимний Байкал</h2>
+          <h2 class="place__name" data-translate="place-4-name">Зимний Байкал</h2>
           <img src="./images/winter-baikal.png" alt="Причудливые узоры на ледяной глади Байкала" class="place__img">
           <div class="place__link-container">
             <span class="place__secondary-text">URL</span>
             <a href="https://vk.com/baikalmile" class="place__link" target="blank">https://vk.com/baikalmile</a>
           </div>
           <div class="place__text">
-            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.</p>
-            <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>
+            <p class="place__paragraph" data-translate="place-4-text-1">Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.</p>
+            <p class="place__paragraph" data-translate="place-4-text-2">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>
           </div>
         </article>
         <article class="place">
-          <h2 class="place__name">Карелия</h2>
+          <h2 class="place__name" data-translate="place-5-name">Карелия</h2>
           <img src="./images/karelia.jpg" alt="Река в окружении лесов Карелии" class="place__img">
           <div class="place__link-container">
             <span class="place__secondary-text">URL</span>
             <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
           </div>
           <div class="place__text">
-            <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+            <p class="place__paragraph" data-translate="place-5-text-1">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
           </div>
         </article>
       </section>
 
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="blank">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+          <h2 class="cover__title" data-translate="cover-title">До Байкала «на собаках»</h2>
+          <p class="cover__subtitle" data-translate="cover-subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
             электричках.</p>
         </a>
       </section>
@@ -168,14 +168,14 @@
     <footer class="footer">
       <nav>
         <ul class="menu">
-          <li class="menu__item"><a href="https://yandex.ru/maps" class="menu__link" target="blank">Карты</a></li>
-          <li class="menu__item"><a href="https://yandex.ru/pogoda" class="menu__link" target="blank">Погода</a></li>
-          <li class="menu__item"><a href="https://rasp.yandex.ru" class="menu__link" target="blank">Расписание</a></li>
-          <li class="menu__item"><a href="https://calendar.yandex.ru" class="menu__link" target="blank">Календарь</a></li>
-          <li class="menu__item"><a href="https://travel.yandex.ru" class="menu__link" target="blank">Путешествия</a></li>
+          <li class="menu__item"><a href="https://yandex.ru/maps" class="menu__link" target="blank" data-translate="menu-maps">Карты</a></li>
+          <li class="menu__item"><a href="https://yandex.ru/pogoda" class="menu__link" target="blank" data-translate="menu-weather">Погода</a></li>
+          <li class="menu__item"><a href="https://rasp.yandex.ru" class="menu__link" target="blank" data-translate="menu-sheldule">Расписание</a></li>
+          <li class="menu__item"><a href="https://calendar.yandex.ru" class="menu__link" target="blank" data-translate="menu-calendar">Календарь</a></li>
+          <li class="menu__item"><a href="https://travel.yandex.ru" class="menu__link" target="blank" data-translate="menu-travels">Путешествия</a></li>
         </ul>
       </nav>
-      <p class="footer__copyright">&#169; 2022. Мариничева Екатерина</p>
+      <p class="footer__copyright" data-translate="copyright">&#169; 2022. Мариничева Екатерина</p>
     </footer>
 </body>
 </html>
