add function for translate page in english

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
             <a href="http://park-kosa.ru" class="place__link" target="blank">park-kosa.ru</a>
           </div>
           <div class="place__text">
-            <p class="place__paragraph" data-translate="place-1-text">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных
+            <p class="place__paragraph" data-translate="place-1-text-1">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных
               горизонта&nbsp;&mdash; спокойного Куршского залива одной стороны и&nbsp;подёрнутого рябью волн Балтийского
               моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
-            <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника
+            <p class="place__paragraph" data-translate="place-1-text-2">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника
               и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская
               коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест
               исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
@@ -175,7 +175,8 @@
           <li class="menu__item"><a href="https://travel.yandex.ru" class="menu__link" target="blank" data-translate="menu-travels">Путешествия</a></li>
         </ul>
       </nav>
-      <p class="footer__copyright" data-translate="copyright">&#169; 2022. Мариничева Екатерина</p>
+      <p class="footer__copyright" data-translate="copyright">2022. Мариничева Екатерина</p>
     </footer>
+  <script src="./scripts/index.js" type="module"></script>
 </body>
 </html>
